Attempt to fix index sizing on mobile

--- a/website/src/global.css
+++ b/website/src/global.css
@@ -36,14 +36,13 @@
 
 body,
 html {
+    height: 100%;
     padding: 0;
     margin: 0;
 }
 
 body {
     background-color: var(--main-8);
-    min-width: 100vw;
-    min-height: 100vh;
 
     font-family: arial, arial black, helvetica, verdana, tahoma, trebuchet MS,
         impact, gill sans, sans-serif;
