--- a/website/src/routes/index.scss
+++ b/website/src/routes/index.scss
@@ -1,11 +1,10 @@
 .container {
     display: flex;
     flex-direction: row;
+    height: 100%;
 
     padding: 15px;
 
     justify-content: space-evenly;
     align-items: center;
-
-    height: 100vh;
 }
